force-app/main/default/objects/CampaignMember/fields/Account_Supporter_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Supporter_ID__c</fullName>
    <formula>Contact.Account.CQ_Supporter_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account: Supporter ID</label>
    <type>Text</type>
</CustomField>