force-app/main/default/objects/CampaignMember/fields/Added_to_parent_campaign__c.field-meta.xml
<CustomField>
    <fullName>Added_to_parent_campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added to parent campaign</label>
    <type>Checkbox</type>
</CustomField>