force-app/main/default/objects/CampaignMember/fields/Ask_3__c.field-meta.xml
<CustomField>
    <fullName>Ask_3__c</fullName>
    <description>Ask 3</description>
    <label>Ask 3</label>
    <length>8</length>
    <type>Text</type>
</CustomField>