force-app/main/default/objects/CampaignMember/fields/Campaign_Member_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_External_ID__c</fullName>
    <description>Contact External id + Event External Id</description>
    <externalId>true</externalId>
    <label>Campaign Member External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>