force-app/main/default/objects/CampaignMember/fields/Case_Safe_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_Contact_ID__c</fullName>
    <formula>CASESAFEID( Contact.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Safe Contact ID</label>
    <type>Text</type>
</CustomField>