force-app/main/default/objects/CampaignMember/fields/Contact_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Campaign_Id__c</fullName>
    <description>Used for searching for existing campaign member records in Zapier</description>
    <formula>Contact.Case_Safe_ID__c+Campaign.Case_Safe_ID__c</formula>
    <label>Contact+Campaign Id</label>
    <type>Text</type>
</CustomField>