force-app/main/default/objects/CampaignMember/fields/Contact_Channel_3__c.field-meta.xml
<CustomField>
    <fullName>Contact_Channel_3__c</fullName>
    <label>Contact Channel 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>