force-app/main/default/objects/CampaignMember/fields/Contact_Supporter_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Supporter_ID__c</fullName>
    <formula>Contact.CQ_Supporter_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact: Supporter ID</label>
    <type>Text</type>
</CustomField>