force-app/main/default/objects/CampaignMember/fields/Contact_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type_1__c</fullName>
    <description>Used for Individual Giving - channels of contact for the Campaign</description>
    <label>Contact Channel 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>