force-app/main/default/objects/CampaignMember/fields/Credit_Card_User__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if a credit card has been used to make a prior donation</description>
    <label>Credit Card User</label>
    <type>Checkbox</type>
</CustomField>