force-app/main/default/objects/CampaignMember/fields/Date_Value_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Date_Value_Created_Date__c</fullName>
    <description>Gives the date value only of the campaign member record created date. Used for Pardot segmentation</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gives the date value only of the campaign member record created date</inlineHelpText>
    <label>Date Value: Created Date</label>
    <type>Date</type>
</CustomField>