force-app/main/default/objects/CampaignMember/fields/Donor_Phoning_Priority__c.field-meta.xml
<CustomField>
    <fullName>Donor_Phoning_Priority__c</fullName>
    <description>Priority in which a donor should be selected to call. This is used in conjunction with the Phoning Order</description>
    <label>Donor Phoning Priority</label>
    <length>99</length>
    <type>Text</type>
</CustomField>