force-app/main/default/objects/CampaignMember/fields/External_URN__c.field-meta.xml
<CustomField>
    <fullName>External_URN__c</fullName>
    <label>External URN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>