force-app/main/default/objects/CampaignMember/fields/Family_Event_survey_url__c.field-meta.xml
<CustomField>
    <fullName>Family_Event_survey_url__c</fullName>
    <formula>Campaign.Survey_URL__c +&quot; ContactId &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event survey url</label>
    <type>Text</type>
</CustomField>