force-app/main/default/objects/CampaignMember/fields/Family_Member__c.field-meta.xml
<CustomField>
    <fullName>Family_Member__c</fullName>
    <formula>TEXT(Contact.Family_Member_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Member</label>
    <type>Text</type>
</CustomField>