force-app/main/default/objects/CampaignMember/fields/Feedback_Comments__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Comments__c</fullName>
    <inlineHelpText>Use this for when a person gives a response to a campaign sent by CQ.  Note, images are allowed and can be used to store hand written notes on these too.</inlineHelpText>
    <label>Feedback-Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>