force-app/main/default/objects/CampaignMember/fields/First_Cash_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Cash_Gift_Amount__c</fullName>
    <label>First Cash Gift Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>