force-app/main/default/objects/CampaignMember/fields/First_Cash_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Cash_Gift_Date__c</fullName>
    <label>First Cash Gift Date</label>
    <length>12</length>
    <type>Text</type>
</CustomField>