force-app/main/default/objects/CampaignMember/fields/Flag_No_Ask__c.field-meta.xml
<CustomField>
    <fullName>Flag_No_Ask__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag No Ask</description>
    <label>Flag No Ask</label>
    <type>Checkbox</type>
</CustomField>