force-app/main/default/objects/CampaignMember/fields/Flag_One_Ask__c.field-meta.xml
<CustomField>
    <fullName>Flag_One_Ask__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag One Ask</description>
    <label>Flag One Ask</label>
    <type>Checkbox</type>
</CustomField>