force-app/main/default/objects/CampaignMember/fields/Fundraising_Campaign_History__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Campaign_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fundraising Campaign History</label>
    <referenceTo>Fundraising_Campaign_Detao_s__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>