force-app/main/default/objects/CampaignMember/fields/Fundraising_Campaign_History_Created__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Campaign_History_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fundraising Campaign History Created</label>
    <type>Checkbox</type>
</CustomField>