force-app/main/default/objects/CampaignMember/fields/Individual_Funds_Raised__c.field-meta.xml
<CustomField>
    <fullName>Individual_Funds_Raised__c</fullName>
    <description>How much did this individual raise on this event?</description>
    <label>Individual Funds Raised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>