force-app/main/default/objects/CampaignMember/fields/Is_Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>Is_Fundraiser__c</fullName>
    <formula>Contact.Funraisin__Is_Fundraiser__c</formula>
    <label>Is Fundraiser</label>
    <type>Checkbox</type>
</CustomField>