force-app/main/default/objects/CampaignMember/fields/Last_Campaign_Gift__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign_Gift__c</fullName>
    <description>last Direct Marketing Campaign where a gift was made</description>
    <label>Last Campaign with Gift</label>
    <type>TextArea</type>
</CustomField>