force-app/main/default/objects/CampaignMember/fields/Last_Campaign_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign_Gift_Amount__c</fullName>
    <label>Last Gift Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>