force-app/main/default/objects/CampaignMember/fields/Last_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Date__c</fullName>
    <label>Last Gift Date</label>
    <type>Date</type>
</CustomField>