force-app/main/default/objects/CampaignMember/fields/Lead_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Campaign_Id__c</fullName>
    <description>Used for searching for existing campaign member records in Zapier</description>
    <formula>Lead.Case_Safe_ID__c+ Campaign.Case_Safe_ID__c</formula>
    <label>Lead+Campaign Id</label>
    <type>Text</type>
</CustomField>