force-app/main/default/objects/CampaignMember/fields/Legacy_Import_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Import_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Import ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>