force-app/main/default/objects/CampaignMember/fields/Match_Up_Sent__c.field-meta.xml
<CustomField>
    <fullName>Match_Up_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match Up Sent</label>
    <type>Checkbox</type>
</CustomField>