force-app/main/default/objects/CampaignMember/fields/Number_of_Gifts_Given__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Gifts_Given__c</fullName>
    <label>Number of Gifts Given</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>