force-app/main/default/objects/CampaignMember/fields/Order_for_Phoning__c.field-meta.xml
<CustomField>
    <fullName>Order_for_Phoning__c</fullName>
    <description>Phoning Order and Details relating to the ordering</description>
    <label>Phoning Order</label>
    <length>99</length>
    <type>Text</type>
</CustomField>