force-app/main/default/objects/CampaignMember/fields/Pack_Type__c.field-meta.xml
<CustomField>
    <fullName>Pack_Type__c</fullName>
    <label>Pack Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>