force-app/main/default/objects/CampaignMember/fields/Participation__c.field-meta.xml
<CustomField>
    <fullName>Participation__c</fullName>
    <label>Participation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>