force-app/main/default/objects/CampaignMember/fields/Personalised_URL__c.field-meta.xml
<CustomField>
    <fullName>Personalised_URL__c</fullName>
    <inlineHelpText>URL for giving with prefilled details.  Could be Payments2US URL Token or givergy url.</inlineHelpText>
    <label>Personalised URL</label>
    <type>Url</type>
</CustomField>