force-app/main/default/objects/CampaignMember/fields/Phoning_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Phoning_Completed_By__c</fullName>
    <description>Name of person who is allocated to make the call or made the call</description>
    <label>Phoning Completed By</label>
    <length>99</length>
    <type>Text</type>
</CustomField>