force-app/main/default/objects/CampaignMember/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration/Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>