force-app/main/default/objects/CampaignMember/fields/Registration_Period__c.field-meta.xml
<CustomField>
    <fullName>Registration_Period__c</fullName>
    <formula>Family_Attendance__r.Registration_Period__r.Name &amp;  Volunteer_Attendance__r.Registration_Period__r.Name</formula>
    <label>Registration Period</label>
    <type>Text</type>
</CustomField>