force-app/main/default/objects/CampaignMember/fields/RG_Ask_1__c.field-meta.xml
<CustomField>
    <fullName>RG_Ask_1__c</fullName>
    <description>Ask 1</description>
    <label>Ask 1</label>
    <length>8</length>
    <type>Text</type>
</CustomField>