force-app/main/default/objects/CampaignMember/fields/RG_Ask_2__c.field-meta.xml
<CustomField>
    <fullName>RG_Ask_2__c</fullName>
    <description>Ask 2</description>
    <label>Ask 2</label>
    <length>8</length>
    <type>Text</type>
</CustomField>