force-app/main/default/objects/CampaignMember/fields/Segment_Code__c.field-meta.xml
<CustomField>
    <fullName>Segment_Code__c</fullName>
    <label>Segment Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>