force-app/main/default/objects/CampaignMember/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <description>Event team name</description>
    <label>Team Name</label>
    <type>TextArea</type>
</CustomField>