force-app/main/default/objects/CampaignMember/fields/Team_s_Funds_Raised__c.field-meta.xml
<CustomField>
    <fullName>Team_s_Funds_Raised__c</fullName>
    <description>How much money did the team raise for this event?</description>
    <label>Team&apos;s Funds Raised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>