force-app/main/default/objects/CampaignMember/fields/Team_URL__c.field-meta.xml
<CustomField>
    <fullName>Team_URL__c</fullName>
    <label>Team URL</label>
    <type>Url</type>
</CustomField>