force-app/main/default/objects/CampaignMember/fields/Total_Cash_Donations__c.field-meta.xml
<CustomField>
    <fullName>Total_Cash_Donations__c</fullName>
    <description>Lifetime total one-off cash donations</description>
    <label>Total Cash Donations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>