force-app/main/default/objects/CampaignMember/fields/Total_of_Gifts_Given__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Gifts_Given__c</fullName>
    <label>Total of Gifts Given</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>