force-app/main/default/objects/CampaignMember/fields/Total_RG_Donations__c.field-meta.xml
<CustomField>
    <fullName>Total_RG_Donations__c</fullName>
    <description>Lifetime total of all Recurring Gifts by Donor</description>
    <label>Total RG Donations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>