force-app/main/default/objects/CampaignMember/fields/Update__c.field-meta.xml
<CustomField>
    <fullName>Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update</label>
    <type>Checkbox</type>
</CustomField>