force-app/main/default/objects/CampaignMember/fields/Variable_1__c.field-meta.xml
<CustomField>
    <fullName>Variable_1__c</fullName>
    <description>Variable text for EDM</description>
    <inlineHelpText>Variable text for EDM</inlineHelpText>
    <label>Variable 1</label>
    <length>99</length>
    <type>Text</type>
</CustomField>