force-app/main/default/objects/CampaignMember/fields/Variable_2__c.field-meta.xml
<CustomField>
    <fullName>Variable_2__c</fullName>
    <label>Variable 2</label>
    <length>99</length>
    <type>Text</type>
</CustomField>