force-app/main/default/objects/CampaignMember/fields/Variable_3__c.field-meta.xml
<CustomField>
    <fullName>Variable_3__c</fullName>
    <label>Variable 3</label>
    <length>99</length>
    <type>Text</type>
</CustomField>