force-app/main/default/objects/CampaignMember/fields/Volunteer_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Attendance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Attendance</label>
    <referenceTo>Volunteer_Attendance__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>